--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 amethyst = {git = "https://github.com/amethyst/amethyst.git", features = ["vulkan"] }
 amethyst-sprite-studio={path="../amethyst-sprite-studio/"}
 amethyst-playfab={path="../amethyst-playfab/"}
+amethyst-collision={path="../amethyst-collision/"}
 playfab-api={path="../playfab-api/"}
 debug_system={path="../debug_system/"}
 fight_game={path = "../fight_game/"}
