--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ amethyst-collision={path="../amethyst-collision/"}
 debug_system={path="../debug_system/"}
 fight_game={path = "../fight_game/", features=["debug"]}
 input-handle={path="../input-handle/"}
-lazy_static="*"
-log = "*"
-glob="*"
-dunce="*"
-serde={version="*", features=["derive"]}
-anyhow="*"
+lazy_static= "1.4.0"
+log = "0.4.8"
+glob= "0.3.0"
+dunce= "1.0.0"
+serde={ version = "1.0.104", features = ["derive"] }
+anyhow= "1.0.26"
