--- a/debug/logger.toml
+++ b/debug/logger.toml
@@ -7,10 +7,13 @@ module_levels = [
     ["resource::animation" ,"Trace"],
     ["amethyst_collision::system::detect_contact" ,"Info"],
     ["fight_game" ,"Error"],
-    ["fight_game::load" ,"Info"],
-    ["fight_game::input" ,"Info"],
+#    ["fight_game::load" ,"Info"],
+#    ["fight_game::input" ,"Info"],
     ["fight_game::components::collision" ,"Info"],
     ["sync_position_to_world" ,"Error"],
     ["fight_game::components::collision" ,"Error"],
     ["gfx_backend_vulkan" ,"Warn"],
+    ["input_handle::system", "Info"],
+
+    #["command_parser::command", "trace"]
 ]
