--- a/debug/logger.toml
+++ b/debug/logger.toml
@@ -4,16 +4,21 @@ log_file="log/log.txt"
 
 module_levels = [
     ["debug_collision","Info"],
+
     ["resource::animation" ,"Trace"],
+
     ["amethyst_collision::system::detect_contact" ,"Info"],
+
     ["fight_game" ,"Error"],
 #    ["fight_game::load" ,"Info"],
 #    ["fight_game::input" ,"Info"],
+    ["fight_game::system::debug::command" ,"Debug"],
     ["fight_game::components::collision" ,"Info"],
-    ["sync_position_to_world" ,"Error"],
     ["fight_game::components::collision" ,"Error"],
+
+    ["sync_position_to_world" ,"Error"],
     ["gfx_backend_vulkan" ,"Warn"],
-    ["input_handle::system", "Info"],
+    ["input_handle::system", "Error"],
 
     #["command_parser::command", "trace"]
 ]
