--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ fight_game={path = "../fight_game/"}
 input-handle={path="../input-handle/"}
 lazy_static= "1.4.0"
 log = "0.4.8"
-serde={ version = "1.0.104", features = ["derive"] }
-anyhow= "1.0.26"
+serde={ version = "1.0.105", features = ["derive"] }
+anyhow= "1.0.27"
 
 # optional dependencies
 toml= { version = "0.5.6", optional = true }
 
 [features]
 default=["debug"]
-debug=["toml", "fight_game/debug"]
+debug=["toml", "fight_game/debug", "amethyst-collision/debug"]
