--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = []
 edition = "2018"
 
 [dependencies]
-amethyst = {git = "https://github.com/amethyst/amethyst.git", features = ["vulkan", "sdl_controller"] }
+amethyst = {git = "https://github.com/amethyst/amethyst.git", features = ["vulkan", "sdl_controller", "no-slow-safety-checks"] }
 amethyst-sprite-studio={path="../amethyst-sprite-studio/"}
 amethyst-collision={path="../amethyst-collision/"}
 debug_system={path="../debug_system/"}
@@ -20,5 +20,9 @@ anyhow= "1.0.27"
 toml= { version = "0.5.6", optional = true }
 
 [features]
-default=["debug"]
+default=["debug", "profile"]
+profile=[
+    "amethyst/profiler",
+    "amethyst-collision/profiler"
+    ]
 debug=["toml", "fight_game/debug", "amethyst-collision/debug"]
