--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ toml= { version = "0.5.6", optional = true }
 default=["debug", "profile"]
 profile=[
     "amethyst/profiler",
-    "amethyst-collision/profiler"
+    "amethyst-collision/profiler",
+    "fight_game/profiler",
     ]
 debug=["toml", "fight_game/debug", "amethyst-collision/debug"]
