--- a/debug/logger.toml
+++ b/debug/logger.toml
@@ -21,5 +21,7 @@ module_levels = [
     ["gfx_backend_vulkan" ,"Warn"],
     ["input_handle::system", "Error"],
 
+#    ["amethyst_sprite_studio::system::build_nodes", "Info"],
+
     #["command_parser::command", "trace"]
 ]
