デフォルトのステートをスプラッシュ画面に， スプライトの表示システムは複数セットできないので，バンドルから外す

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,9 @@ profile=[
     "amethyst/profiler",
     "fight_game/profiler",
     ]
-debug=["toml", "fight_game/debug", "amethyst-aabb/debug"]
+debug=[
+    "toml",
+    "fight_game/debug",
+    "amethyst-aabb/debug",
+    "amethyst-sprite-studio/debug"
+]
