--- a/debug/logger.toml
+++ b/debug/logger.toml
@@ -13,7 +13,7 @@ module_levels = [
 #    ["fight_game::load" ,"Info"],
 #    ["fight_game::input" ,"Info"],
 #    ["fight_game::system::debug::command" ,"Debug"],
-    ["fight_game::system::extrude" ,"Debug"],
+    ["fight_game::system::extrude" ,"Warn"],
     ["fight_game::components::collision" ,"Error"],
     ["fight_game::paramater::translate_animation" ,"Debug"],
 
@@ -21,8 +21,10 @@ module_levels = [
     ["gfx_backend_vulkan" ,"Warn"],
     ["input_handle::system", "Error"],
 
-#    ["amethyst_sprite_studio::system::build_nodes", "Info"],
+    ["amethyst_sprite_studio::system::build_nodes", "Warn"],
     ["amethyst_sprite_studio::resource", "Debug"],
+
+    ["movement_transform::system", "Warn"],
 
     #["command_parser::command", "trace"]
 ]
