--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,11 @@ anyhow= "1.0.27"
 toml= { version = "0.5.6", optional = true }
 
 [features]
-default=["debug", "profile"]
+default=[
+    "debug",
+    "profile",
+    "count-frame",
+    ]
 profile=[
     "amethyst/profiler",
     "fight_game/profiler",
@@ -29,5 +33,9 @@ debug=[
     "toml",
     "fight_game/debug",
     "amethyst-aabb/debug",
-    "amethyst-sprite-studio/debug"
+    "amethyst-sprite-studio/debug",
+]
+count-frame=[
+    "fight_game/count-frame",
+    "amethyst-sprite-studio/count-frame",
 ]
