--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ toml= { version = "0.5.6", optional = true }
 default=[
     "debug",
     "profile",
-    "count-frame",
+    "count-frame",  # 試しに固定60fpsでアニメーション等の時間計算を行う
     ]
 profile=[
     "amethyst/profiler",
