--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ toml= { version = "0.5.6", optional = true }
 default=[
     "debug",
     "profile",
-    "count-frame",  # 試しに固定60fpsでアニメーション等の時間計算を行う
+    "fixed-frame",  # 試しに固定60fpsでアニメーション等の時間計算を行う
     ]
 profile=[
     "amethyst/profiler",
@@ -35,7 +35,7 @@ debug=[
     "amethyst-aabb/debug",
     "amethyst-sprite-studio/debug",
 ]
-count-frame=[
-    "fight_game/count-frame",
-    "amethyst-sprite-studio/count-frame",
+fixed-frame=[
+    "fight_game/fixed-frame",
+    "amethyst-sprite-studio/fixed-frame",
 ]
